crates/rig-derive/tests/ui/tool_context/fail_owned_context.stderr
error: a `ToolContext` parameter must have type `&mut ToolContext`
 --> tests/ui/tool_context/fail_owned_context.rs:9:14
  |
9 |     context: ToolContext,
  |              ^^^^^^^^^^^
